--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 /*General style*/
 body {
-  font-family:Arial,Helvetica,sans-serif;
+  font-family: 'Gloria Hallelujah', cursive;
   font-size: 13px;
 }
 
@@ -23,9 +23,20 @@ body {
   height:600px;
 }
 
-/*Style for drop down list for selecting a car*/
-.selectBox {
+/*Style for menuBox*/
+.menuBox {
   font-size: 25px;
+  background-color: rgba(205, 220, 57, 0.64);
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 1;
+  width: 85%;
+  height: 80%;
+  overflow: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*Style for Nearest Location List*/
@@ -112,9 +123,9 @@ table.adp-directions {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
   border-radius: 5px;
-  font-family: Arial;
+  font-family: 'Gloria Hallelujah', cursive;
   color: #302530;
-  font-size: 20px;
+  font-size: 22px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
