--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 /*General style*/
 body {
   font-family: 'Gloria Hallelujah', cursive;
-  font-size: 13px;
+  font-size: 23px;
 }
 
 #container {
@@ -37,6 +37,16 @@ select, input {
   font-size: 22px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+}
+select, input {
+    margin: 2px;
+    padding: 10px 0px 10px 0px;
+}
+@media only screen and (max-width: 330px) {
+  select, input {
+      margin: 2px;
+      padding: 10px 0px 10px 0px;
+  }
 }
 
 /*Style for speech bubble*/
@@ -83,17 +93,39 @@ blockquote.speech {
 /*Style for menuBox*/
 .menuBox {
   font-size: 25px;
-  background-color: rgba(205, 220, 57, 0.64);
-  padding: 20px;
-  border-radius: 10px;
+  background-color: rgba(251, 251, 251, 0.28);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 150px;
+  margin: 0%;
   /*z-index: 1;*/
-  width: 85%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   overflow: auto;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+@media only screen and (max-height: 600px) {
+  .menuBox {
+    padding-top: 0px;
+  }
+}
+
+.menuBoxBackground {
+  background-image: url("../library/images/ev-in-field.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /*margin: 0%;*/
+  width: 100%;
+  height: 100%;
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /*Style for Nearest Location List*/
@@ -134,7 +166,10 @@ ul {
 }
 
 .pumpDiv {
-  background-color: red;
+  background-color: rgba(77, 100, 111, 0.48);
+    padding: 2;
+    border-radius: 9px;
+    margin: 10px auto 10px auto;
 }
 
 
