--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,19 @@ ul {
     margin: 10px auto 10px auto;
 }
 
+/**Style for Charging Station Detail Page**/
+.chargingStationPanel {
+  font-size: 25px;
+  background-color: rgba(251, 251, 251, 0.75);
+  /*z-index: 1;*/
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /*Style for direction panel*/
 #direction-panel {
