--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 #map {
+  z-index: 1;
   margin: auto;
   width:80%;
   height:600px;
@@ -60,7 +61,7 @@ blockquote.bubble {
 	box-sizing: content-box;
 	line-height: 1;
   font-size: 3.5vw;
-  /*z-index: 1;*/
+  z-index: 5;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -70,6 +71,7 @@ blockquote.speech {
   background: url(../../library/images/speech-bubble2.svg);
   /*width: 25%;*/
   padding: 10% 5% 15% 5%;
+  z-index: 6;
 }
 
 .pulsate {
@@ -99,7 +101,7 @@ blockquote.speech {
   background-repeat: no-repeat;
   padding-top: 150px;
   margin: 0%;
-  /*z-index: 1;*/
+  z-index: 4;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -119,7 +121,7 @@ blockquote.speech {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  /*margin: 0%;*/
+  z-index: 3;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -128,6 +130,9 @@ blockquote.speech {
     transform: translate(-50%, -50%);
 }
 
+.errorMessage {
+  color: red;
+}
 /*Style for Nearest Location List*/
 ul {
     list-style-image: url('../library/images/point-b.png');
@@ -159,13 +164,11 @@ ul {
 
 /**Style for Charging Station Detail Page**/
 .chargingStationPanel {
-  background-color: white;
-  background-image: url("../library/images/electricMotorWay.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /*z-index: 1;*/
   font-size: 25px;
+  background-color: rgba(251, 251, 251, 0.28);
+  padding: 20px;
+  margin: 0%;
+  z-index: 4;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -175,8 +178,22 @@ ul {
   transform: translate(-50%, -50%);
 }
 
+.chargingStationPanelImageLayer {
+  background-image: url("../library/images/electricMotorWay.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .pumpDiv {
-  background-color: rgba(77, 100, 111, 0.48);
+  background-color: white;
   margin: 10px;
   padding: 5px;
   border-radius: 10px;
@@ -189,7 +206,7 @@ ul {
   width: 400px;
   font-size: 22px;
   margin: 5px;
-  padding: 10px;
+  padding: 20px;
   display: inline-block;
 }
 
@@ -204,9 +221,17 @@ ul {
 }
 .closeBtn:focus {outline:0;}
 
+/*Style for selection button section*/
+.buttonsSection {
+  z-index: 6;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
+
 /*Style for directions map*/
 #directionsMap {
-  margin: auto;
+  margin: 20px auto;
   width:80%;
   height:600px;
 }
@@ -214,7 +239,7 @@ ul {
 /*Style for directions panel*/
 #directionsPanel {
   width: 80%;
-  margin: auto;
+  margin: 20px auto 20px auto;
   background-color: rgb(255, 255, 255);
 }
 
@@ -241,7 +266,7 @@ table.adp-directions {
 
 .btn {
   border: 0px;
-  margin: 10px;
+  margin: 5px;
   box-shadow: 5px 5px 5px #888888;
   background: #f7f7f7;
   background-image: -webkit-linear-gradient(top, #f7f7f7, #94e629);
